--- a/client/src/app/components/job-list.component.html
+++ b/client/src/app/components/job-list.component.html
@@ -1,22 +1,53 @@
-<h3>List of Jobs starting with: {{ query }}</h3>
-
-<div class="search-results">
-  <mat-card *ngFor="let j of jobs">
-    <mat-card-content  [routerLink]="[j.job_id]">{{ j.job_id }}</mat-card-content>
-    <mat-card-content>{{ j.employer_name }}</mat-card-content>
-    <img width="150" height= "150" src="{{j.employer_logo}}"/>
-    <mat-card-content>Job Title: {{ j.job_title}}</mat-card-content>
-    <mat-card-content>{{ j.job_country }}</mat-card-content>
-    <mat-card-content>{{ j.job_employment_type }}</mat-card-content>
-  </mat-card>
-
+<div class="offset-md-2-col-lg-5 col-md-4 offset-lg-1 offset-md-3">
+  <img src="assets/images/logo.png" class="logo" />
 </div>
 
-<div class="button-row">
-  <!-- <button mat-flat-button color="primary" (click)="onChangePage(-1)" [disabled]="currOffset <= 0">
+<div class="bg-image" style="background-image: url('assets/images/bg2.jpg')">
+  <div id="overlay" class="bg-image">
+    <div class="offset-md-2-col-lg-5 col-md-4 offset-lg-5 offset-md-3">
+      <div class="panel-body p-3">
+        <div class="input-field">
+            <button routerLink="/search">Back</button>
+        </div>
+      </div>
+    </div>    
+  </div>
+</div>
+
+    <div class="content">
+        <div fxLayout="row wrap">
+          <div fxFlex="33%" *ngFor="let j of jobs">
+            <mat-card class="mat-elevation-z4">
+              <mat-card-header>
+                <mat-card-title>{{ j.employer_name }}</mat-card-title>
+              </mat-card-header>
+              <img width="150" height= "150" mat-card-image src="{{j.employer_logo}}">
+              <mat-card-content>
+                <p>{{ j.job_title}}</p>
+              </mat-card-content>
+              <mat-card-content>{{ j.job_country }}</mat-card-content>
+             <mat-card-content>{{ j.job_employment_type }}</mat-card-content>
+             <br>
+             <button mat-button class="MD" [routerLink]="[j.job_id]">More Details</button>
+             <br>
+            </mat-card>
+          </div>
+        </div>
+      </div>
+        
+        
+        
+        
+        
+        
+        
+
+
+<!-- <div class="button-row">
+  <button mat-flat-button color="primary" (click)="onChangePage(-1)" [disabled]="currOffset <= 0">
     Prev
   </button>
   <button mat-flat-button color="primary" (click)="onChangePage(1)">
     Next
-  </button> -->
-</div>
+  </button>
+</div> -->
