Final for deployment

--- a/client/src/app/components/apply-job.component.html
+++ b/client/src/app/components/apply-job.component.html
@@ -1,6 +1,4 @@
-<div class="offset-md-2-col-lg-5 col-md-4 offset-lg-1 offset-md-3">
-  <img src="assets/images/logo.png" class="logo" />
-</div>
+<app-login-status></app-login-status>
 
 <div class="offset-md-2-col-lg-5 col-md-4 offset-lg-4 offset-md-3">
   <div class="panel border">
@@ -35,7 +33,7 @@
           </div>
             <p>Please upload your resume</p>
           <input type="file" formControlName="resume" #image>
-          
+
         </div>
         <button type="submit" class="btn btn-primary btn-block mt-4 w-100">Submit</button>
       </form>
