--- a/client/src/app/components/job-list.component.html
+++ b/client/src/app/components/job-list.component.html
@@ -1,6 +1,4 @@
-<div class="offset-md-2-col-lg-5 col-md-4 offset-lg-1 offset-md-3">
-  <img src="assets/images/logo.png" class="logo" />
-</div>
+<app-login-status></app-login-status>
 
 <div class="bg-image" style="background-image: url('assets/images/bg2.jpg')">
   <div id="overlay" class="bg-image">
@@ -10,7 +8,7 @@
             <button routerLink="/search">Back</button>
         </div>
       </div>
-    </div>    
+    </div>
   </div>
 </div>
 
@@ -34,13 +32,13 @@
           </div>
         </div>
       </div>
-        
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
+
 
 
 <!-- <div class="button-row">
