--- a/client/src/app/components/job-details.component.html
+++ b/client/src/app/components/job-details.component.html
@@ -3,13 +3,13 @@
 <mat-card>
 
     <mat-card-content *ngFor="let jd of details, let i = index">
-      <mat-card-content>{{ jd.job_id }}</mat-card-content>
+      <mat-card-content>Job ID: {{ jd.job_id }}</mat-card-content>
       <img width="150" height= "150" src="{{jd.employer_logo}}"/>
-      <mat-card-content>{{ jd.employer_name }}</mat-card-content>
-      <mat-card-content>{{ jd.job_title }}</mat-card-content>
-      <mat-card-content>{{ jd.job_country }}</mat-card-content>
-      <mat-card-content>{{ jd.job_employment_type }}</mat-card-content>
-      <mat-card-content class="content">{{ jd.job_description }}</mat-card-content>
+      <mat-card-content>Job Name: {{ jd.employer_name }}</mat-card-content>
+      <mat-card-content>Job Title: {{ jd.job_title }}</mat-card-content>
+      <mat-card-content>Job Country: {{ jd.job_country }}</mat-card-content>
+      <mat-card-content>Job Employment Type: {{ jd.job_employment_type }}</mat-card-content>
+      <mat-card-content class="content">Job Description: {{ jd.job_description }}</mat-card-content>
 
       <br><br>
 
