nav bar button instead of links

--- a/client/src/app/components/job-details.component.html
+++ b/client/src/app/components/job-details.component.html
@@ -9,7 +9,7 @@
       <mat-card-content>Job Title: {{ jd.job_title }}</mat-card-content>
       <mat-card-content>Job Country: {{ jd.job_country }}</mat-card-content>
       <mat-card-content>Job Employment Type: {{ jd.job_employment_type }}</mat-card-content>
-      <mat-card-content class="content">Job Description: {{ jd.job_description }}</mat-card-content>
+      <mat-card-content class="content">{{ jd.job_description }}</mat-card-content>
 
       <br><br>
 
